[tool.poetry]
name = "bubble_decoder2"
version = "0.1.0"
description = "A project to decode bubbles."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "3.0.0"
flask-cors = "4.0.0"
textblob = "0.17.1"
nltk = "3.8.1"
requests = "2.31.0"
dependency-injector = "^4.48.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 